test/files/neg/patternalts.check
patternalts.scala:3: error: illegal variable in pattern alternative
    case List(x) | List() => Console.println(x)
              ^
patternalts.scala:3: error: not found: value x
    case List(x) | List() => Console.println(x)
                                             ^
two errors found
